[gd_scene load_steps=16 format=3 uid="uid://7o3yw1nov7qk"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_negh2"]
[ext_resource type="Texture2D" uid="uid://3vrwvy40pe0o" path="res://assets/sprites/mr-hat-all.png" id="2_5neol"]
[ext_resource type="PackedScene" uid="uid://dce1qyted5om5" path="res://scenes/components/health_component.tscn" id="2_m25mh"]
[ext_resource type="Script" path="res://scenes/player/player_stats.gd" id="2_twhho"]
[ext_resource type="Script" path="res://data/modifiers/effects.gd" id="3_gpny6"]
[ext_resource type="PackedScene" uid="uid://jx1xla68i4hy" path="res://scenes/components/hurt_box_component.tscn" id="5_jq43u"]

[sub_resource type="Resource" id="Resource_j2l0f"]
script = ExtResource("2_twhho")
speed = 375.0
max_health = 100
jump_height = 100.0
damage = 1.5
damage_resist = 0.0
projectiles_max = 3
character_size = 1.0
attack_speed = 1.25

[sub_resource type="Animation" id="Animation_p7qkm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -41)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mrneg"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1.68179, 0.517632),
"update": 0,
"values": [44, 49]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -33)]
}

[sub_resource type="Animation" id="Animation_qj51v"]
resource_name = "into_the_portal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-6.28319, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(2.2974, 0.297302, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_c5qcv"]
resource_name = "run_right"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -35)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6bu6l"]
_data = {
"RESET": SubResource("Animation_p7qkm"),
"idle": SubResource("Animation_mrneg"),
"into_the_portal": SubResource("Animation_qj51v"),
"run_right": SubResource("Animation_c5qcv")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rst82"]
radius = 20.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u7lm2"]
radius = 30.0
height = 96.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7nslh"]
radius = 37.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 99
position = Vector2(385, 304)
collision_mask = 72
floor_max_angle = 1.22173
script = ExtResource("1_negh2")
player_stats = SubResource("Resource_j2l0f")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Effects" type="Node" parent="."]
script = ExtResource("3_gpny6")

[node name="HealthComponent" parent="." instance=ExtResource("2_m25mh")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6bu6l")
}
autoplay = "RESET"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -37)
shape = SubResource("CapsuleShape2D_rst82")

[node name="CollisionArea2D" type="Area2D" parent="."]
collision_layer = 49
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -41)
shape = SubResource("CapsuleShape2D_u7lm2")

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_jq43u")]
collision_layer = 256
collision_mask = 2052
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, -42)
shape = SubResource("CircleShape2D_7nslh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, -41)
texture = ExtResource("2_5neol")
hframes = 11
vframes = 6
frame = 44

[node name="ProjectilePos" type="Node2D" parent="."]
position = Vector2(2, -35)

[connection signal="body_shape_entered" from="HurtBoxComponent" to="." method="_on_hurt_box_component_body_shape_entered"]
